tests-integration/tests/roundtrip/invalid/semantic/typecheck/int_var_in_bool_expr/int_var_in_bool_expr.essence
letting x be 5
find y : bool
such that x \/ y